# looper-rs

./: .env.example  Cargo.toml  Makefile  README.md
docs/: README.md
docs/architecture/: README.md  messaging.md  modules.md  runtime-flow.md
docs/development/: README.md  adding-handler.md  conventions.md
docs/getting-started/: README.md  configuration.md  running.md
docs/handlers/: README.md  openai-chat-completions.md  openai-responses.md
docs/tools/: README.md  adding-a-tool.md  built-in-tools.md
examples/: cli.rs  cli_non_streaming.rs
prompts/: system_prompt.txt
src/: lib.rs  looper.rs  looper_stream.rs  main.rs  theme.rs
src/mapping/: mod.rs
src/mapping/tools/: anthropic.rs  mod.rs  openai_completions.rs  openai_responses.rs
src/mapping/turn/: anthropic.rs  mod.rs  openai_completions.rs
src/services/: chat_handler.rs  chat_handler_streaming.rs  mod.rs  streaming_chat_handler.rs
src/services/handlers/: anthropic.rs  anthropic_non_streaming.rs  mod.rs  openai_compatible.rs  openai_completions.rs  openai_completions_non_streaming.rs  openai_responses.rs  openai_responses_non_streaming.rs
src/tools/: empty.rs  list_directory.rs  mod.rs  read_file.rs  set_agent_loop_state.rs  sub_agent.rs
src/types/: messages.rs  mod.rs  tool.rs  turn.rs
