[package]
name = "loopin-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
futures = "0.3"
anyhow = "1.0.102"
dotenv = "0.15.0"
async-openai = { version = "0.33.0", features = ["chat-completion", "responses"]}
async-trait = "0.1.89"
async-recursion = "1.1.1"
indicatif = "0.18.4"
console = "0.16.2"

[[example]]
name = "cli"
path = "examples/cli.rs"
